.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glaystmtissue__c.object
<CustomObject>
    <description>glaystmtissue</description>
    <fields>
        <fullName>rstkf__currencymismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currency Mismatch Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__fiscalyearperiod__c</fullName>
        <label>Fiscal Year / Period</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glay__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>glay</label>
        <referenceTo>rstkf__glay__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>glaydim</label>
        <referenceTo>rstkf__glaydim__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>glaydimdiv</label>
        <referenceTo>rstkf__glaydimdiv__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydimproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>glaydimproj</label>
        <referenceTo>rstkf__glaydimproj__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>glaydiv</label>
        <referenceTo>rstkf__glaydiv__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glayproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>glayproj</label>
        <referenceTo>rstkf__glayproj__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>glaystmt</label>
        <referenceTo>rstkf__glaystmt__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaystmtnotfound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Glaystmt Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>glaystmtissues</relationshipLabel>
        <relationshipName>glaystmtissues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__newcr__c</fullName>
        <label>New Credit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__newdr__c</fullName>
        <label>New Debit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__priorcr__c</fullName>
        <label>Prior Credit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__priordr__c</fullName>
        <label>Prior Debit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__valuediscrepancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value Discrepancy Found</label>
        <type>Checkbox</type>
    </fields>
    <label>glaystmtissue</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>glaystmtissues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>